# maracas

./: .gitignore  Makefile.in  README.md  config.status  configure  configure.ac  maracas.desktop
.github/workflows/: main.yml
debian/: changelog  control  files  install
src/: COPYING  Makefile.am  Makefile.in  main.c  maracas.h  wavwrite.c  wavwrite.h
